src/components/SquareTabs/styles.module.css
.container {
  position: relative;

  &::before,
  &::after {
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: calc(var(--z-index-sticky-tabs) + 1);
    width: 7.5rem;
    pointer-events: none;
    content: '';
    opacity: 0; /* Initially hidden */
    transition: opacity 0.3s;
  }

  &.showLeftGradient::before,
  &.showRightGradient::after {
    opacity: 1; /* Show when scrollable */
  }

  &::before {
    left: 0;
    background: linear-gradient(
      -90deg,
      rgb(255 255 255 / 0%) 0%,
      rgb(255 255 255 / 30%) 20%,
      #fff 100%
    );
  }

  &::after {
    right: 0;
    background: linear-gradient(
      90deg,
      rgb(255 255 255 / 0%) 0%,
      rgb(255 255 255 / 30%) 20%,
      #fff 100%
    );
  }
}

.tabList {
  @mixin hide-scrollbar;

  display: flex;
  gap: var(--sp16);
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  &.sticky {
    position: sticky;
    top: 0;
    z-index: var(--z-index-sticky-tabs);
    background: var(--color-white);
  }
}

.tabItem {
  @mixin transition;

  flex-shrink: 0;
  padding: var(--sp5) var(--sp10);
  font-size: var(--text14);
  line-height: 1.375rem;
  color: var(--color-grey-darker);
  cursor: pointer;
  user-select: none;
  background: var(--color-grey-lighter);
  border-radius: 0.5rem;
  transition-property: background-color, color;

  /* FIX: change the font-weight of a font, the text will typically cause a bit of a layout shift
    ref: https://stackoverflow.com/a/32570813
    */
  &::after {
    display: block;
    height: 0;
    overflow: hidden;
    font-weight: var(--font-semibold);
    color: transparent;
    visibility: hidden;
    content: attr(data-title);
  }

  &:hover {
    background: var(--color-grey-light);
  }

  &.selected {
    font-weight: var(--font-semibold);
    color: var(--color-white);
    background: var(--color-black);
  }

  &.gold {
    color: var(--color-matters-gold-press);
    background: var(--color-top-up-yellow);

    &:hover {
      background: var(--color-top-up-yellow-darker);
    }

    &.selected {
      color: var(--color-white);
      background: var(--color-warn-yellow);
    }
  }
}

